Added Custom Log Appender and refactored Log Excerpt into UserControl
Added a custom logging appender that keeps an excerpt of recent logging events.  This output is bound to the Log view in the UI, that I've refactored into a UserControl with dependency properties.  This project should be mostly complete now.  The only thing left on the to-do list is possibly a Mock view model for the Designer.

--- a/WpfSampler/WpfSampler.csproj
+++ b/WpfSampler/WpfSampler.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -61,6 +61,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CommandLine.cs" />
+    <Compile Include="Logging\AppenderBase.cs" />
+    <Compile Include="Logging\LogExcerptAppender.cs" />
     <Compile Include="Models\ProductCatalog.cs" />
     <Compile Include="ViewModels\Behaviors\AudioBehavior.cs" />
     <Compile Include="ViewModels\Converters\BooleanConverter.cs" />
@@ -71,6 +73,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Resources\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Controls\TextViewerControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -88,6 +94,10 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="ViewModels\MarkupExtensions\TextQualifier.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
+    <Compile Include="Views\Controls\TextViewerControl.xaml.cs">
+      <DependentUpon>TextViewerControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Controls\CustomControl.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -130,5 +140,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
