--- a/WpfSampler/App.config
+++ b/WpfSampler/App.config
@@ -18,10 +18,16 @@
         <conversionPattern value="%date %level %message%newline" />
       </layout>
     </appender>
+    <appender name="LogExcerptAppender" type="WpfSampler.Logging.LogExcerptAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %level %message%newline" />
+      </layout>
+    </appender>
     <root>
       <level value="ALL" />
       <appender-ref ref="DebugAppender" />
       <appender-ref ref="FileAppender" />
+      <appender-ref ref="LogExcerptAppender" />
     </root>
   </log4net>
   
